# workpad-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/app/: auth.py  chat_service.py  citation_verifier.py  core.py  github_client.py  hashing.py  main.py  models.py  projects.py  rfc_drafter.py  scaffold_service.py  schemas.py  sources.py  spec_service.py  transcripts.py
apps/api/tests/: conftest.py  test_auth.py  test_citation_insight.py  test_citation_verifier_e2e.py  test_github_cache.py  test_github_client.py  test_hashing.py  test_library_api.py  test_project_isolation.py  test_projects.py  test_projects_backfill.py  test_rfc_drafter.py  test_rfc_drafter_e2e.py  test_scaffold.py  test_sources_api.py  test_sources_backfill.py  test_transcripts.py
apps/web/: Dockerfile  index.html  package.json  tailwind.config.cjs
apps/web/src/: App.tsx  index.css  main.tsx  tokens.css
apps/web/src/components/: ArtifactDiffView.tsx  LibraryHome.tsx  PublicPages.tsx
apps/web/src/lib/: auth.ts  projects.ts  systemTheme.ts
docs/: EXPANSION_HYPOTHESES.md  PERSONAL_MVP_SPEC.md  PRODUCT_VISION.md  V1_BACKLOG.md  V1_SPEC.md  WEB_MULTIUSER_SPEC.md
docs/archive/: PERSONAL_MVP_SPEC.md  WEB_MULTIUSER_SPEC.md
